add utility functions to remove elements from the DDI e.g. remove summary statistics
